k8s-manifests/base/cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: akhilthyadi/kube-cart:latest
          ports:
            - containerPort: 5000
